--- a/GestionPOA/App/Views/metas/nuevo.html
+++ b/GestionPOA/App/Views/metas/nuevo.html
@@ -25,7 +25,7 @@
                 <div class="card-header card-header-tabs" data-background-color="green">
                     <div class="nav-tabs-navigation">
                         <div class="nav-tabs-wrapper">
-                            <a ng-show="vm.appstate =='showAdd'" class="ui olive label" data-toggle="modal" data-target="#myModal" ng-click="vm.ventanaMeta()"><i class="add icon"></i>Estrategia</a>
+                            <a ng-show="vm.appstate =='showAdd'" class="ui olive label" data-toggle="modal" data-target="#myModal" ng-click="vm.ventanaMeta()"><i class="add icon"></i>Metas</a>
                             <span class="nav-tabs-title"><b>INDICADOR:</b> {{vm.Indicador }}</span>
                             <ul class="nav nav-tabs" data-tabs="tabs"></ul>
                         </div>
