--- a/GestionPOA/App/Views/metas/index.html
+++ b/GestionPOA/App/Views/metas/index.html
@@ -25,7 +25,7 @@
                             </thead>
                           
                             <tbody>
-                                <tr style="font-size:12px;" ng-if="vm.deparmentID!=8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
+                                <tr style="font-size:12px;"  class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
                                     <td class="text-center"><input type="checkbox" ng-model="checked" ng-init="checked=true" ng-disabled="true"/></td>
                                     <td style="font-size:13px;" >{{Programacion.Metas}}</td>
                                     <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Programacion.MetaID)" class="text-success">ver más</span></td>
@@ -65,13 +65,9 @@
                                         </button>
                                     </td>
                                 </tr>
-                                <tr style="font-size:12px;" ng-if="vm.deparmentID==8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
-                                   <!--<td ng-if="Programacion.I == '110' || Programacion.I == '220' || Programacion.I == '330'">
-                                          <input type="checkbox" ng-model="checked" ng-init="checked=false" />
-                                    </td>-->
-                                    <!--<td ng-if="Programacion.I != '110' || Programacion.I != '220' || Programacion.I != '330'">
-                                        <input type="checkbox" ng-model="checked1" ng-init="checked=true" />
-                                    </td>-->
+                               
+                                <!--<tr style="font-size:12px;" ng-if="vm.deparmentID==8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
+                          
                                     <td>
                                         <input type="checkbox" ng-model="checked" ng-init="checked=true"  />
                                     </td>
@@ -130,7 +126,9 @@
                                             <i class="material-icons">cached</i>
                                         </button>
                                     </td>
-                                </tr>
+                                </tr>-->
+
+
                                 <tr><td class="text-success" data-loader colspan="10"></td></tr>
                             </tbody>
                         </table>
