prohibiciones de rutas

--- a/GestionPOA/App/Views/estrategias/index.html
+++ b/GestionPOA/App/Views/estrategias/index.html
@@ -3,7 +3,7 @@
         <div class="col-lg-6 col-md-12">
             <div class="card">
                 <div class="card-header card-header-text" data-background-color="orange">
-                    <h4 class="card-title">Objetivos Específicos Asignados</h4>
+                    <h4 class="card-title">Objetivos Específicos</h4>
                 </div>
                 <div class="card-content table-responsive">
                     <table class="table table-hover">
