--- a/GestionPOA/Views/Admin/Login.cshtml
+++ b/GestionPOA/Views/Admin/Login.cshtml
@@ -99,6 +99,73 @@
             </footer>
 
         </div>
+               <!-- MODAL -->
+        <div id="myModalss" class="modal fade" data-backdrop="static" data-keyboard="false" ng-controller="LoginController as vm">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title text-success">:: Generar Planificación ::</h4>
+                    </div>
+                    <form name="planificacionForm" class="ui form"  ng-submit="vm.registerPlanificacion()" novalidate>
+                        <div class="modal-body">
+                            <div class="form-group label-floating">
+                                <label class="control-label">PLANIFICACIÓN</label>
+                                <div class="form-group">
+                                    <select class="form-group" ng-model="vm.TipoPlanificacion" ng-options="arrOptionSelectTP.id as arrOptionSelectTP.Descripcion for arrOptionSelectTP in vm.arrOptionTP" required>
+                                        <option value=""  >-- Seleccione --</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group label-floating">
+                                <label class="control-label">PERIOCIDAD</label>
+                                <div class="form-group">
+                                    <select class="form-group" ng-model="vm.Planificacionperiodo" ng-options="arrOptionSelect.id as arrOptionSelect.Periodo for arrOptionSelect in vm.arrOption" required>
+                                        <option value="">-- Seleccione --</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-fill btn-success" ng-disabled="planificacionForm.$invalid">Planificar <i class="next_week"></i></button>
+                          
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!-- END MODAL -->
+        <!-- MODAL POAPEDI -->
+        <div id="myModalPOAPEDI" class="modal fade" data-backdrop="static" data-keyboard="false" ng-controller="LoginController as vm">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title text-success">:: INGRESAR AL SISTEMA ::</h4>
+                    </div>
+                    <form name="planificacionForm" class="ui form" ng-submit="vm.SingInToPOAorPedi()" novalidate>
+                        <div class="modal-body">
+                            <div class="form-group label-floating">
+                                <label class="control-label">INGRESAR A LA ADMINISTRACIÓN COMO: </label>
+                                <div class="form-group">
+                                    <select class="form-group" required ng-model="vm.POAorPEDi">
+                                        <option value="POA">POA</option>
+                                        <option value="PEDI">PEDI</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-fill btn-success" ng-disabled="planificacionForm.$invalid">Ingresar <i class="forward"></i></button>
+
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!-- END MODAL POAPEDI -->
     </div>
 
 
@@ -107,6 +174,23 @@
 
     <script type="text/javascript">
         $().ready(function () {
+
+            $('.datepicker').datetimepicker({
+                format: 'YYYY/MM/DD',
+                icons: {
+                    time: "fa fa-clock-o",
+                    date: "fa fa-calendar",
+                    up: "fa fa-chevron-up",
+                    down: "fa fa-chevron-down",
+                    previous: 'fa fa-chevron-left',
+                    next: 'fa fa-chevron-right',
+                    today: 'fa fa-screenshot',
+                    clear: 'fa fa-trash',
+                    close: 'fa fa-remove',
+                    inline: true
+                }
+            }); 
+
             demo.checkFullPageBackgroundImage();
 
             setTimeout(function () {
@@ -115,5 +199,7 @@
             }, 700)
         });
     </script>
+  
+
 </body>
 </html>
