--- a/GestionPOA/Views/Admin/Index.cshtml
+++ b/GestionPOA/Views/Admin/Index.cshtml
@@ -77,7 +77,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li ng-show="vm.rol=='Administrador'">
+                    <li ng-show="vm.rol=='Administrador'" data-status="@Request.RequestContext.HttpContext.Session["POAorPEDI"]" id="status">
                         <a data-toggle="collapse" href="#objetivoestrategico">
                             <i class="material-icons">gps_fixed</i>
                             <p>
@@ -166,19 +166,19 @@
                                 <li style="padding-left:12px;">
                                     <a href="#!/Metas/Ejecucion"> <i class="material-icons" style="color: #4caf50;">play_circle_filled</i>Ejecución</a>
                                 </li>
-                                <li  ng-show="@Request.RequestContext.HttpContext.Session["POAorPEDI"]=='PEDI'" style="padding-left:12px;" >
+                                <li  ng-show="vm.status=='PEDI'" style="padding-left:12px;" >
                                     <a href="#!/Metas/Asignacion"> <i class="material-icons" style="color: #4caf50;">library_add</i>Asignacion</a>
                                 </li>
                                 <li style="padding-left:12px;">
                                     <a href="#!/Metas/Acciones"> <i class="material-icons" style="color: #4caf50;">text_format</i>Acciones</a>
                                 </li>
-                                <li style="padding-left:12px;"   ng-show="@Request.RequestContext.HttpContext.Session["POAorPEDI"]=='PEDI'"">
+                                <li style="padding-left:12px;"   ng-show="vm.status=='PEDI'"">
                                     <a href="#!/Metas/Informacion/Adicional"> <i class="material-icons" style="color: #4caf50;">info</i>Fórmula Cálculo</a>
                                 </li>
                             </ul>
                         </div>
                     </li>
-                    <li ng-show="@Request.RequestContext.HttpContext.Session["POAorPEDI"]=='PEDI'">
+                    <li ng-show="vm.status=='PEDI'">
                         <a data-toggle="collapse" href="#configuracion">
                             <i class="material-icons">build</i>
                             <p>
