--- a/GestionPOA/App/Views/periodo/index.html
+++ b/GestionPOA/App/Views/periodo/index.html
@@ -7,20 +7,20 @@
             </div>
             <div class="card-content">
                 <h4 class="card-title">:: Registrar periodo de planificación del PEDI ::</h4>
-                <form name="AddSubsistemasForm" ng-submit="vm.addPeriodo();" novalidate>
+                <form name="AddPeridosForm" ng-submit="vm.addPeriodo();" novalidate>
                     <div class="form-group label-floating">
                         <label class="control-label">DESCRIPCIÓN</label>
                         <input type="text" class="form-control" ng-model="vm.periodo.Descripcion" required>
                     </div>
                     <div class="form-group label-floating">
                         <label class="control-label">FECHA INICIO</label>
-                        <input type="text" class="form-control datepicker clearfix" ng-model="vm.periodo.inicio" required>
+                        <input type="text" class="form-control" placeholder="dia/mes/año" ng-model="vm.periodo.inicio" ui-date-mask="DD-MM-YYYY" required>
                     </div>
                     <div class="form-group label-floating">
                         <label class="control-label">FECHA FINALIZACIÓN</label>
-                        <input type="text" class="form-control datepicker clearfix" ng-model="vm.periodo.fin" required>
+                        <input type="text"  class="form-control" placeholder="dia/mes/año" ng-model="vm.periodo.fin" ui-date-mask="DD-MM-YYYY" required>
                     </div>
-                    <input type="submit" value="Registrar" class="btn btn-fill btn-success" ng-disabled="AddSubsistemasForm.$invalid" />
+                    <input type="submit" value="Registrar" class="btn btn-fill btn-success" ng-disabled="AddPeridosForm.$invalid" />
                 </form>
             </div>
         </div>
@@ -52,18 +52,28 @@
                     </div>
                 </div>
                 <table ng-table="vm.tableParams" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
-                    <tr ng-repeat="subsitemas in vm.listSubsistemas | orderBy: 'id' | filter:searchText as results">
+                    <tr ng-repeat="periodos in vm.listPeriodos | orderBy: 'id' | filter:searchText as results">
                         <td title="'Ìtems'" class="text-center">
                             {{$index +1}}
                         </td>
-                        <td title="'Subsistemas'" class="text-center">
-                            {{subsitemas.Descripcion}}
+                        <td title="'Descripción'" class="text-center">
+                            {{periodos.Descripcion}}
                         </td>
+                        <td title="'Fecha Inicio'" class="text-center">
+                           {{periodos.inicio.substr(6,13) | date:'dd/MM/yyyy'}}
+                        </td>
+                        <td title="'Fecha de Finalización'" class="text-center">
+                            {{periodos.fin.substr(6,13) | date:'dd/MM/yyyy'}}
+                        </td>
+                        <td title="'Estado'" class="text-center">
+                            {{periodos.estado}}
+                        </td>
+                   
                         <td title="'Acciones'" class="td-actions text-center">
-                            <button type="button" rel="tooltip" title="Editar" data-toggle="modal" data-target="#myModal" ng-click="vm.ventanaModalSubsistema(subsitemas)" class="btn btn-success btn-round">
+                            <button type="button" rel="tooltip" title="Editar" data-toggle="modal" data-target="#myModal" ng-click="vm.ventanaModalPeriodo(periodos)" class="btn btn-success btn-round">
                                 <i class="material-icons">edit</i>
                             </button>
-                            <button type="submit" rel="tooltip" title="Eliminar" class="btn btn-danger btn-round" ng-click="vm.deleteSubsistema(subsitemas.SubsistemaId, $index)">
+                            <button type="submit" rel="tooltip" title="Eliminar" class="btn btn-danger btn-round" ng-click="vm.deletePeriodo(periodos.periodoId, $index)">
                                 <i class="material-icons">close</i>
                             </button>
                         </td>
@@ -82,21 +92,41 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title text-success">:: Actualizar Subsistema ::</h4>
+                    <h4 class="modal-title text-success">:: Actualizar periodo de planificación del PEDI  ::</h4>
                 </div>
-                <form name="updateSubsistemasForm" class="ui form" ng-submit="vm.updateSubsistema()" novalidate>
+                <form name="updatePeriodosForm" class="ui form" ng-submit="vm.updatePeriodos()" novalidate>
                     <div class="modal-body">
                         <div class="form-group label-floating">
-                            <label class="control-label">OBJETIVO ESPECíFICO</label>
+                            <label class="control-label">DESCRIPCIÓN</label>
                             <div class="form-group">
-                                <input type="text" class="form-control" class="form-control datepicker clearfix" ng-model="vm.modalsubsistema.Descripcion" required>
+                                <input type="text" class="form-control" ng-model="vm.modalPeriodos.Descripcion" required>
                             </div>
                         </div>
-                        <input type="hidden" ng-model="vm.modalsubsistema.SubsistemaId" ng-value="vm.modalsubsistema.SubsistemaId">
-                        <input type="hidden" ng-model="vm.modalsubsistema.eliminado" ng-value="vm.modalsubsistema.eliminado = 0">
+                        <div class="form-group label-floating">
+                            <label class="control-label">FECHA INICIO</label>
+                            <div class="form-group">
+                                <input type="text" class="form-control"  ng-model="vm.modalPeriodos.inicio" ui-date-mask="DD-MM-YYYY" required>
+                            </div>
+                        </div>
+                        <div class="form-group label-floating">
+                            <label class="control-label">FECHA FINALIZACIÓN</label>
+                            <div class="form-group">
+                                <input type="text" class="form-control"  ng-model="vm.modalPeriodos.fin" ui-date-mask="DD-MM-YYYY" required>
+                            </div>
+                        </div>
+                        <div class="form-group label-floating">
+                            <label class="control-label">ESTADO</label>
+                            <div class="form-group">
+                                <select ng-model="vm.modalPeriodos.estado" ng-value="vm.modalPeriodos.estado" required>
+                                    <option value="true">Activo</option>
+                                    <option value="false">Inactivo</option>
+                                </select>                               
+                            </div>
+                        </div>
+                        <input type="hidden" ng-model="vm.modalPeriodos.periodoId" ng-value="vm.modalPeriodos.periodoId">
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-fill btn-success" ng-disabled="updateSubsistemasForm.$invalid">Actualizar <i class="refresh icon"></i></button>
+                        <button type="submit" class="btn btn-fill btn-success" ng-disabled="updatePeriodosForm.$invalid">Actualizar <i class="refresh icon"></i></button>
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Close <i class="remove icon"></i></button>
                     </div>
                 </form>
