--- a/GestionPOA/App/Views/indicadores/index.html
+++ b/GestionPOA/App/Views/indicadores/index.html
@@ -97,7 +97,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title text-success">:: Actualizar Indicador ::</h4>
+                    <h4 class="modal-title text-success">:: Agregar Indicador ::</h4>
                 </div>
                 <form name="updateIndicadoresForm" class="ui form" ng-submit="vm.updateIndicador()" novalidate>
                     <div class="modal-body">
