--- a/GestionPOA/App/Views/objetivoespecificos/index.html
+++ b/GestionPOA/App/Views/objetivoespecificos/index.html
@@ -9,7 +9,7 @@
                 <form name="AddObjetivoEspecificoForm" ng-submit="vm.addObjetivosEspecificos()" novalidate>
                     <div class="form-group label-floating">
                         <label class="control-label">OBJETICO ESTRATÉGICO INSTITUCIONAL</label>
-                        <select class="form-control" ng-model="vm.objetivosEspecificos.ObjetivosEstragicoId" ng-options="arrOptionSelect.ObjetivosEstragicoId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects">
+                        <select class="form-control" ng-model="vm.objetivosEspecificos.ObjetivosEstragicoId" ng-options="arrOptionSelect.ObjetivosEstragicoId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects" required>
                             <option value="">-- Seleccione --</option>
                         </select>
                     </div>
@@ -52,7 +52,7 @@
                 <table ng-table="vm.tableParams" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
                     <tr ng-repeat="objetivoespecifico in vm.listObjetivosEspecificos | filter:searchText as results">
                         <td title="'Ìtems'" class="text-center">
-                            {{objetivoespecifico.ObjetivosEspecificosId}}
+                            {{$index+1}}
                         </td>
                         <td title="'Objetivo Estratégico Institucional'" class="text-center">
                             {{objetivoespecifico.DescripcionOEI}}
