--- a/GestionPOA/App/Views/metas/ejecucion.html
+++ b/GestionPOA/App/Views/metas/ejecucion.html
@@ -5,13 +5,12 @@
                 <div class="card-header card-header-text" data-background-color="orange">
                     <h4 class="card-title">Ejecución de Metas</h4>
                 </div>
-
                 <div class="card-content table-responsive">
                     <form name="categoryForm">
                         <table class="table table-hover">
                             <thead class="text-warning" ng-show="vm.status=='POA'">
                                 <tr class="text-center" style="font-size:9px;">
-                                    <th rowspan="2" class="fond">Cualitativo</th>
+                                    <th rowspan="2" class="fond">Cuantitativo</th>
                                     <th rowspan="2" width="60%" class="fond">Metas</th>
                                     <th rowspan="2" class="fond"> </th>
                                     <th colspan="4" class="text-center fond">Ejecución Trimestral Meta en %</th>
@@ -25,7 +24,7 @@
                             </thead>
                             <thead class="text-warning"  ng-show="vm.status=='PEDI'">
                                 <tr class="text-center" style="font-size:9px;">
-                                    <th rowspan="2" class="fond">Cualitativo</th>
+                                    <th rowspan="2" class="fond">Cuantitativo</th>
                                     <th rowspan="2" width="60%" class="fond">Metas</th>
                                     <th rowspan="2" class="fond"> </th>
                                     <th colspan="5" class="text-center fond"> EJECUCIÓN - PERIOCIDAD</th>
@@ -36,7 +35,7 @@
                                 </tr>
                             </thead>
                                 <tr style="font-size:20px;" ng-if="vm.status=='POA'" class="animate-if" ng-repeat="Ejecucion in vm.listadoMetasEjecucion">
-                                    <td class="text-center"><input type="checkbox" ng-model="checked" ng-init="checked=true" ng-disabled="true" /></td>
+                                    <td class="text-center"><i class="material-icons">done</i></td>
                                     <td style="font-size:12px;">{{Ejecucion.Metas}}</td>
                                     <td style="font-size:10px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Ejecucion.MetaID)" class="text-success">ver más</span></td>
                                     <td class="text-center colPla">
@@ -89,14 +88,12 @@
                                         <span data-toggle="modal" rel="tooltip" title="Agregar Observación" data-target="#myModalAddObservacion" style="cursor:pointer;" ng-click="vm.ObservacionDetalle(Ejecucion.MetaID)" class="text-success">Añadir</span>
                                     </td>
                                 </tr>
-                            <tbody style="font-size:12px;  border:1px" ng-show="vm.status=='PEDI'"  ng-repeat="Ejecucion in vm.listadoMetasEjecucion">
+                                <tbody style="font-size:12px;  border:1px" ng-show="vm.status=='PEDI'"  ng-repeat="Ejecucion in vm.listadoMetasEjecucion">
                                 <tr ng-if="Ejecucion.Planificacion > 500" class="animate-if">
-                                    <td>
-                                        <input type="checkbox" ng-model="checked" ng-checked="checked" ng-init="checked=false" ng-disabled="true"/>
-                                    </td>
+                                    <td></td>
                                     <td style="font-size:13px;">{{Ejecucion.Metas}}</td>
                                     <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Ejecucion.MetaID)" class="text-success">ver más </span></td>                                 
-                                    <td class="text-center animate-if" ng-show="checked==false">
+                                    <td class="text-center">
                                         <div ng-show="vm.Observacion[Ejecucion.ID_I+''+Ejecucion.MetaID] != '' && vm.Observacion[Ejecucion.ID_I+''+Ejecucion.MetaID] != null " class="obPlaMeta text-center" rel="tooltip" title="Detalle Observación" data-toggle="modal" data-target="#observaEjecucion" ng-click="vm.getObservacionEjecucion(Ejecucion.MetaID,Ejecucion.ID_I)">Ver</div>
                                         <select ng-model="Ejecucion.I"  ng-change="vm.searhPlanificacion(Ejecucion.MetaID,Ejecucion.ID_I)" ng-disabled="{{vm.CurrentDate | date:'yyyy'}} != vm.year[0]" >
                                             <option value="110">Satisfactorio</option>
@@ -107,7 +104,7 @@
                                         <i ng-show="vm.off9[Ejecucion.ID_I+''+Ejecucion.MetaID] != null" class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal" data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_I)">unarchive</i>
                                         <br><span class="planiValor">{{vm.off9[Ejecucion.ID_I+""+Ejecucion.MetaID]}}</span>
                                     </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
+                                    <td class="text-center">
                                         <div ng-show="vm.Observacion[Ejecucion.ID_II+''+Ejecucion.MetaID] != '' && vm.Observacion[Ejecucion.ID_II+''+Ejecucion.MetaID] != null " class="obPlaMeta" rel="tooltip" title="Detalle Observación" data-toggle="modal" data-target="#observaEjecucion" ng-click="vm.getObservacionEjecucion(Ejecucion.MetaID,Ejecucion.ID_II)">Ver</div>
                                         <select ng-model="Ejecucion.II" ng-change="vm.searhPlanificacion(Ejecucion.MetaID,Ejecucion.ID_II)" ng-disabled="{{vm.CurrentDate | date:'yyyy'}} != vm.year[1]">
                                             <option value="110">Satisfactorio</option>
@@ -118,7 +115,7 @@
                                         <i ng-show="vm.off9[Ejecucion.ID_II+''+Ejecucion.MetaID] != null" class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal" data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_II)">unarchive</i>
                                         <br><span class="planiValor">{{vm.off9[Ejecucion.ID_II+""+Ejecucion.MetaID]}}</span>
                                     </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
+                                    <td class="text-center">
                                         <div ng-show="vm.Observacion[Ejecucion.ID_III+''+Ejecucion.MetaID] != '' && vm.Observacion[Ejecucion.ID_III+''+Ejecucion.MetaID] != null " class="obPlaMeta" rel="tooltip" title="Detalle Observación" data-toggle="modal" data-target="#observaEjecucion" ng-click="vm.getObservacionEjecucion(Ejecucion.MetaID,Ejecucion.ID_III)">Ver</div>
                                         <select ng-model="Ejecucion.III" ng-change="vm.searhPlanificacion(Ejecucion.MetaID,Ejecucion.ID_III)" ng-disabled="{{vm.CurrentDate | date:'yyyy'}} != vm.year[2]">
                                             <option value="110">Satisfactorio</option>
@@ -129,7 +126,7 @@
                                         <i ng-show="vm.off9[Ejecucion.ID_III+''+Ejecucion.MetaID] != null" class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal" data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_III)">unarchive</i>
                                         <br><span class="planiValor">{{vm.off9[Ejecucion.ID_III+""+Ejecucion.MetaID]}}</span>
                                     </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
+                                    <td class="text-center">
                                         <div ng-show="vm.Observacion[Ejecucion.ID_IV+''+Ejecucion.MetaID] != '' && vm.Observacion[Ejecucion.ID_IV+''+Ejecucion.MetaID] != null " class="obPlaMeta" rel="tooltip" title="Detalle Observación" data-toggle="modal" data-target="#observaEjecucion" ng-click="vm.getObservacionEjecucion(Ejecucion.MetaID,Ejecucion.ID_IV )">Ver</div>
                                         <select ng-model="Ejecucion.IV" ng-change="vm.searhPlanificacion(Ejecucion.MetaID,Ejecucion.ID_IV)" ng-disabled="{{vm.CurrentDate | date:'yyyy'}} != vm.year[3]">
                                             <option value="110">Satisfactorio</option>
@@ -140,7 +137,7 @@
                                         <i ng-show="vm.off9[Ejecucion.ID_IV+''+Ejecucion.MetaID] != null" class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal" data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_IV)">unarchive</i>
                                         <br><span class="planiValor">{{vm.off9[Ejecucion.ID_IV+""+Ejecucion.MetaID]}}</span>
                                     </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
+                                    <td class="text-center">
                                         <div ng-show="vm.Observacion[Ejecucion.ID_V+''+Ejecucion.MetaID] != '' && vm.Observacion[Ejecucion.ID_V+''+Ejecucion.MetaID] != null " class="obPlaMeta" rel="tooltip" title="Detalle Observación" data-toggle="modal" data-target="#observaEjecucion" ng-click="vm.getObservacionEjecucion(Ejecucion.MetaID,Ejecucion.ID_V )">Ver</div>
                                         <select ng-model="Ejecucion.V" ng-change="vm.searhPlanificacion(Ejecucion.MetaID,Ejecucion.ID_V)" ng-disabled="{{vm.CurrentDate | date:'yyyy'}} != vm.year[4]">
                                             <option value="110">Satisfactorio</option>
@@ -153,12 +150,10 @@
                                     </td>
                                 </tr>
                                 <tr  ng-if="Ejecucion.Planificacion <= 500" class="animate-if">
-                                    <td>
-                                        <input type="checkbox" ng-model="checked" ng-checked="checked" ng-init="checked=true" ng-disabled="true"/>
-                                    </td>
+                                    <td><i class="material-icons">done</i></td>
                                     <td style="font-size:13px;">{{Ejecucion.Metas}}</td>
                                     <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Ejecucion.MetaID)" class="text-success">ver más</span></td>
-                                    <td class="text-center colPla animate-if" ng-show="checked==true">
+                                    <td class="text-center colPla">
                                         <div class="ui input">
                                             <div ng-show="vm.Observacion[Ejecucion.ID_I+''+Ejecucion.MetaID] != null" class="obPlaMeta" rel="tooltip" title="Detalle Observación" data-toggle="modal" data-target="#observaEjecucion" ng-click="vm.getObservacionEjecucion(Ejecucion.MetaID,Ejecucion.ID_I )">Ver</div>
                                             <input ng-disabled="{{vm.CurrentDate | date:'yyyy'}} != vm.year[0]" size="2" type="text" ng-model="Ejecucion.I" numbers-only max="" class="inpEje " ng-click="vm.searhPlanificacion(Ejecucion.MetaID,Ejecucion.ID_I)" />
@@ -167,7 +162,7 @@
                                             <span class="planiValor">{{vm.off9[Ejecucion.ID_I+""+Ejecucion.MetaID]}}</span>
                                         </div>
                                     </td>
-                                    <td class="text-center colPla animate-if" ng-show="checked==true">
+                                    <td class="text-center colPla">
                                         <div class="ui input">
                                             <div ng-show="vm.Observacion[Ejecucion.ID_II+''+Ejecucion.MetaID] != null" class="obPlaMeta" rel="tooltip" title="Detalle Observación" data-toggle="modal" data-target="#observaEjecucion" ng-click="vm.getObservacionEjecucion(Ejecucion.MetaID,Ejecucion.ID_II)">Ver</div>
                                             <input ng-disabled="{{vm.CurrentDate | date:'yyyy'}} != vm.year[1]" size="2" type="text" ng-model="Ejecucion.II" numbers-only max="" class="inpEje " ng-click="vm.searhPlanificacion(Ejecucion.MetaID,Ejecucion.ID_II)" />
@@ -176,7 +171,7 @@
                                             <span class="planiValor">{{vm.off9[Ejecucion.ID_II+""+Ejecucion.MetaID]}}</span>
                                         </div>
                                     </td>
-                                    <td class="text-center colPla animate-if" ng-show="checked==true">
+                                    <td class="text-center colPla">
                                         <div class="ui input">
                                             <div ng-show="vm.Observacion[Ejecucion.ID_III+''+Ejecucion.MetaID] != null" class="obPlaMeta" rel="tooltip" title="Detalle Observación" data-toggle="modal" data-target="#observaEjecucion" ng-click="vm.getObservacionEjecucion(Ejecucion.MetaID,Ejecucion.ID_III)">Ver</div>
                                             <input ng-disabled="{{vm.CurrentDate | date:'yyyy'}} != vm.year[2]" size="2" type="text" ng-model="Ejecucion.III" numbers-only max="" class="inpEje " ng-click="vm.searhPlanificacion(Ejecucion.MetaID,Ejecucion.ID_III)" />
@@ -185,7 +180,7 @@
                                             <span class="planiValor">{{vm.off9[Ejecucion.ID_III+""+Ejecucion.MetaID]}}</span>
                                         </div>
                                     </td>
-                                    <td class="text-center colPla animate-if" ng-show="checked==true">
+                                    <td class="text-center colPla">
                                         <div class="ui input">
                                             <div ng-show="vm.Observacion[Ejecucion.ID_IV+''+Ejecucion.MetaID] != null" class="obPlaMeta" rel="tooltip" title="Detalle Observación" data-toggle="modal" data-target="#observaEjecucion" ng-click="vm.getObservacionEjecucion(Ejecucion.MetaID,Ejecucion.ID_IV)">Ver</div>
                                             <input ng-disabled="{{vm.CurrentDate | date:'yyyy'}} != vm.year[3]" size="2" type="text" ng-model="Ejecucion.IV" numbers-only max="" class="inpEje " ng-click="vm.searhPlanificacion(Ejecucion.MetaID,Ejecucion.ID_IV)" />
@@ -194,7 +189,7 @@
                                             <span class="planiValor">{{vm.off9[Ejecucion.ID_IV+""+Ejecucion.MetaID]}}</span>
                                         </div>
                                     </td>
-                                    <td class="text-center colPla animate-if" ng-show="checked==true">
+                                    <td class="text-center colPla">
                                         <div class="ui input">
                                             <div ng-show="vm.Observacion[Ejecucion.ID_V+''+Ejecucion.MetaID] != null" class="obPlaMeta" rel="tooltip" title="Detalle Observación" data-toggle="modal" data-target="#observaEjecucion" ng-click="vm.getObservacionEjecucion(Ejecucion.MetaID,Ejecucion.ID_V)">Ver</div>
                                             <input ng-disabled="{{vm.CurrentDate | date:'yyyy'}} != vm.year[4]" size="2" type="text" ng-model="Ejecucion.V" numbers-only max="" class="inpEje " ng-click="vm.searhPlanificacion(Ejecucion.MetaID,Ejecucion.ID_V)" />
