--- a/GestionPOA/App/Views/metas/index.html
+++ b/GestionPOA/App/Views/metas/index.html
@@ -10,7 +10,7 @@
                         <table class="table table-hover">
                             <thead class="text-warning" ng-show="vm.status=='POA'">
                                 <tr class="text-center" style="font-size:9px;">
-                                    <th rowspan="2" class="fond">Cualitativo</th>
+                                    <th rowspan="2" class="fond">Cuantitativo</th>
                                     <th rowspan="2" width="60%" class="fond">Metas</th>
                                     <th rowspan="2" class="fond"> </th>
                                     <th rowspan="2" class="fond">Tiempo Meta</th>
@@ -24,7 +24,7 @@
                             </thead>
                             <thead class="text-warning" ng-show=" vm.status=='PEDI'">
                                 <tr class="text-center" style="font-size:9px;">
-                                    <th rowspan="2" class="fond">Cualitativo</th>
+                                    <th rowspan="2" class="fond">Cuantitativo</th>
                                     <th rowspan="2" width="60%" class="fond">Metas</th>
                                     <th rowspan="2" class="fond"> </th>
                                     <th colspan="5" class="text-center fond">PLANIFICACIÓN - PERIOCIDAD</th>
@@ -35,7 +35,7 @@
                                 </tr>
                             </thead>
                                 <tr style="font-size:12px;" class="animate-if" ng-if="vm.status=='POA'" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
-                                    <td class="text-center"><input type="checkbox" ng-model="checked" ng-init="checked=true" ng-disabled="true" /></td>
+                                    <td class="text-center"><i class="material-icons">done</i></td>
                                     <td style="font-size:13px;">{{Programacion.Metas}}</td>
                                     <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Programacion.MetaID)" class="text-success">ver más</span></td>
                                     <td class="text-center">
@@ -74,67 +74,40 @@
                                         </button>
                                     </td>
                                 </tr>
-                            <tbody style="font-size:12px;  border:1px" ng-show="vm.status=='PEDI'" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
-                                <tr ng-if="Programacion.I == 110 || Programacion.I == 220 || Programacion.I == 330" class="animate-if">
-                                    <td>
-                                        <input type="checkbox" ng-model="checked" ng-checked="checked" ng-init="checked=false" />
-                                    </td>
+                                <tbody style="font-size:12px;  border:1px" ng-show="vm.status=='PEDI'" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
+                                <tr ng-if="Programacion.TipoCalificacion == 'Cualitativo'" class="animate-if">
+                                    <td></td>
                                     <td style="font-size:13px;">{{Programacion.Metas}}</td>
-                                    <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Programacion.MetaID)" class="text-success">ver más</span></td>
-                                    <td class="text-center animate-if" ng-show="checked==true">
-                                        <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.I" numbers-only max="" />
-                                        </div>
-                                    </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
+                                    <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Programacion.MetaID)" class="text-success">ver más</span></td>                                
+                                    <td class="text-center">
                                         <select ng-model="Programacion.I">
                                             <option value="110">Satisfactorio</option>
                                             <option value="220">Medio Satisfactorio</option>
                                             <option value="330">Deficiente</option>
                                         </select>
                                     </td>
-                                    <td class="text-center animate-if" ng-show="checked==true">
-                                        <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.II" numbers-only max="" />
-                                        </div>
-                                    </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
+                                    <td class="text-center">
                                         <select ng-model="Programacion.II">
                                             <option value="110">Satisfactorio</option>
                                             <option value="220">Medio Satisfactorio</option>
                                             <option value="330">Deficiente</option>
                                         </select>
                                     </td>
-                                    <td class="text-center animate-if" ng-show="checked==true">
-                                        <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.III" numbers-only max="" />
-                                        </div>
-                                    </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
+                                    <td class="text-center">
                                         <select ng-model="Programacion.III">
                                             <option value="110">Satisfactorio</option>
                                             <option value="220">Medio Satisfactorio</option>
                                             <option value="330">Deficiente</option>
                                         </select>
                                     </td>
-                                    <td class="text-center animate-if" ng-show="checked==true">
-                                        <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.IV" numbers-only max="" />
-                                        </div>
-                                    </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
+                                    <td class="text-center">
                                         <select ng-model="Programacion.IV">
                                             <option value="110">Satisfactorio</option>
                                             <option value="220">Medio Satisfactorio</option>
                                             <option value="330">Deficiente</option>
                                         </select>
                                     </td>
-                                    <td class="text-center animate-if" ng-show="checked==true">
-                                        <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.V" numbers-only max="" />
-                                        </div>
-                                    </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
+                                    <td class="text-center">
                                         <select ng-model="Programacion.V">
                                             <option value="110">Satisfactorio</option>
                                             <option value="220">Medio Satisfactorio</option>
@@ -147,71 +120,34 @@
                                         </button>
                                     </td>
                                 </tr>
-                                <tr ng-if="Programacion.I != 110 &&  Programacion.I != 220 && Programacion.I != 330" class="animate-if">
-                                    <td>
-                                        <input type="checkbox" ng-model="checked" ng-checked="checked" ng-init="checked=true" />
-                                    </td>
+                                <tr ng-if="Programacion.TipoCalificacion == 'Cuantitativo'"  class="animate-if">
+                                    <td><i class="material-icons">done</i></td>
                                     <td style="font-size:13px;">{{Programacion.Metas}}</td>
                                     <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Programacion.MetaID)" class="text-success">ver más</span></td>
-                                    <td class="text-center animate-if" ng-show="checked==true">
+                                    <td class="text-center">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Programacion.I" numbers-only max="" />
                                         </div>
                                     </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
-                                        <select ng-model="Programacion.I">
-                                            <option value="110">Satisfactorio</option>
-                                            <option value="220">Medio Satisfactorio</option>
-                                            <option value="330">Deficiente</option>
-                                        </select>
-                                    </td>
-                                    <td class="text-center animate-if" ng-show="checked==true">
+                                    <td class="text-center">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Programacion.II" numbers-only max="" />
                                         </div>
                                     </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
-                                        <select ng-model="Programacion.II">
-                                            <option value="110">Satisfactorio</option>
-                                            <option value="220">Medio Satisfactorio</option>
-                                            <option value="330">Deficiente</option>
-                                        </select>
-                                    </td>
-                                    <td class="text-center animate-if" ng-show="checked==true">
+                                    <td class="text-center">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Programacion.III" numbers-only max="" />
                                         </div>
                                     </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
-                                        <select ng-model="Programacion.III">
-                                            <option value="110">Satisfactorio</option>
-                                            <option value="220">Medio Satisfactorio</option>
-                                            <option value="330">Deficiente</option>
-                                        </select>
-                                    </td>
-                                    <td class="text-center animate-if" ng-show="checked==true">
+                                    <td class="text-center">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Programacion.IV" numbers-only max="" />
                                         </div>
                                     </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
-                                        <select ng-model="Programacion.IV">
-                                            <option value="110">Satisfactorio</option>
-                                            <option value="220">Medio Satisfactorio</option>
-                                            <option value="330">Deficiente</option>
-                                        </select>
-                                    </td>
-                                    <td class="text-center animate-if" ng-show="checked==true">
+                                    <td class="text-center">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Programacion.V" numbers-only max="" />
                                         </div>
-                                    </td>
-                                    <td class="text-center animate-if" ng-show="checked==false">
-                                        <select ng-model="Programacion.V">
-                                            <option value="110">Satisfactorio</option>
-                                            <option value="220">Medio Satisfactorio</option>
-                                            <option value="330">Deficiente</option>
-                                        </select>
                                     </td>
                                     <td class="td-actions text-center">
                                         <button type="submit" rel="tooltip" title="Actualizar" ng-click="vm.updateMetasProgramacion(Programacion)" class="btn btn-success btn-round">
