--- a/GestionPOA/App/Views/metas/nuevo.html
+++ b/GestionPOA/App/Views/metas/nuevo.html
@@ -74,8 +74,17 @@
                         <br />
                         <div class="form-group label-floating">
                             <label class="control-label">TIPO CALIFICACIÓN</label>
-                            <select class="form-group" ng-model="vm.modalMetas.tipoCalificacionId" ng-options="arrOptionSelect.id as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects">
-                                <option value="0">-- Seleccione --</option>
+                            <!--<select class="form-group" ng-model="vm.modalMetas.tipoCalificacionId" ng-options="arrOptionSelect.id as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects">
+                                <option value="0" ng-if="">-- Seleccione --</option>
+                            </select>-->
+                            <select class="form-group" ng-if="vm.status=='PEDI'" ng-model="vm.modalMetas.tipoCalificacionId"  required>
+                                <option value="">-- Seleccione --</option>
+                                <option value="1">Cualitativo</option>
+                                <option value="2">Cuantitativo</option>
+                            </select>
+                            <select class="form-group" ng-if="vm.status=='POA'" ng-model="vm.modalMetas.tipoCalificacionId" required>
+                                <option value="">-- Seleccione --</option>
+                                <option value="2">Cuantitativo</option>
                             </select>
                         </div>
                         <div class="form-group label-floating">
