fix rutas del bundle

--- a/GestionPOA/Views/Admin/Index.cshtml
+++ b/GestionPOA/Views/Admin/Index.cshtml
@@ -9,7 +9,7 @@
     <!-- pusher-js -->
     <script src="//js.pusher.com/2.2/pusher.min.js"></script>
     @Styles.Render("~/Content/plantillaCss")
-    @Styles.Render("~/Content/plugins")
+    @Styles.Render("~/Content/plugin")
 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" />
     <link rel="stylesheet" href="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.css">
@@ -18,7 +18,7 @@
 </head>
 <body ng-app="appGestion">
     <div class="wrapper" ng-controller="LoginController as vm">
-        <div class="sidebar" data-active-color="green" data-background-color="black" data-image="/Content/img/sidebar-1.jpg">
+        <div class="sidebar" data-active-color="green" data-background-color="black" data-image="../Content/img/sidebar-1.jpg">
             <!--
                 Tip 1: You can change the color of active element of the sidebar using: data-active-color="purple | blue | green | orange | red | rose"
                 Tip 2: you can also add an image using data-image tag
