--- a/GestionPOA/Views/Admin/Login.cshtml
+++ b/GestionPOA/Views/Admin/Login.cshtml
@@ -7,7 +7,7 @@
     <title>:: Gestión Plan Operativo Anual ::</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     @Styles.Render("~/Content/plantillaCss")
-    @Styles.Render("~/Content/plugins")
+    @Styles.Render("~/Content/plugin")
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" />
     <link rel="stylesheet" href="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.css">
 </head>
