--- a/GestionPOA/App/Views/login/index.html
+++ b/GestionPOA/App/Views/login/index.html
@@ -21,7 +21,7 @@
     </div>
 </nav>
 <div class="wrapper wrapper-full-page" ng-controller="LoginController as vm">
-    <div class="full-page login-page" filter-color="black" data-image="/Content/img/login.jpg">
+    <div class="full-page login-page" filter-color="black" data-image="/gestionPoa/Content/img/login.jpg">
         <!--   you can change the color of the filter page using: data-color="blue | purple | green | orange | red | rose " -->
         <div class="content">
             <div class="container">
