--- a/GestionPOA/Views/Admin/Login.cshtml
+++ b/GestionPOA/Views/Admin/Login.cshtml
@@ -35,7 +35,7 @@
         </div>
     </nav>
     <div class="wrapper wrapper-full-page" ng-controller="LoginController as vm">
-        <div class="full-page login-page" filter-color="black" data-image="/Content/img/login.jpg">
+        <div class="full-page login-page" filter-color="black" data-image="/gestionPoa/Content/img/login.jpg">
             <!--   you can change the color of the filter page using: data-color="blue | purple | green | orange | red | rose " -->
             <div class="content">
                 <div class="container">
@@ -206,7 +206,7 @@
                        "~/App/Controller/EstrategiasController.js",
                        "~/App/Directivas/decimalOnly.js",
                        "~/App/Directivas/formatCurrency.js", 
-                       "~/App/Directivas/uploadFile.js",
+                       "~/App/Directivas/uploaderFile.js",
                        "~/App/Directivas/loader.js"
                         )
 
